<?xml version="1.0"?>
<package format="3">
  <name>taller_tortuga_cpp</name>
  <version>0.0.0</version>
  <description>Control de tortuga ROS2</description>
  <maintainer email="elkinnez@email.com">elkinnez</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>turtlesim</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>